# yibao

./: AI-Agent沙龙筹备方案-20260725.md
app/: README.md  design.html  index.html  package-lock.json  package.json  panel.html  vite.config.ts
app/src/: App.vue  DesignPreview.vue  design.ts  main.ts  panel.ts
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json  panel.json
app/src-tauri/src/: lib.rs
app/src/assets/: tokens.css
app/src/components/: Avatar.vue  Bubble.vue  ConfirmDialog.vue  InputBar.vue  PanelApp.vue  PermissionsBanner.vue  SchemaPanel.vue  WebviewPanel.vue
app/src/lib/: brain.ts  markdown.ts  schema.ts  window.ts
docs/research/: 2026-07-16-landscape-research.md
plugins/forge/: api.toml  manifest.toml
plugins/notes/: api.toml  manifest.toml
plugins/reminders/: api.toml  manifest.toml
plugins/toolbox/: api.toml  manifest.toml
plugins/zimeiti/: api.toml  manifest.toml
sidecar/: .env.example  .gitignore  README.md  pyproject.toml
sidecar/scripts/: download_models.py
sidecar/src/yibao_brain/: __init__.py  audit.py  cli.py  config.py  history.py  host.py  instance.py  invoker.py  ipc.py  llm.py  loop.py  memory.py  permissions.py  plugindb.py  plugins.py  reminders.py  safety.py  server.py  skills.py  skills_composite.py  skills_real.py  testing.py  voice.py
sidecar/src/yibao_brain/mac/: a11y_mac.py  host_mac.py
sidecar/src/yibao_brain/models/: .gitignore
sidecar/tests/: conftest.py  fakes.py  test_audit.py  test_composite.py  test_data_dir.py  test_forge.py  test_history.py  test_instance.py  test_invoker.py  test_ipc.py  test_llm.py  test_loop.py  test_memory.py  test_plugindb.py  test_plugins.py  test_real_skills.py  test_reminders.py  test_routing.py  test_safety.py  test_server.py  test_skills.py  test_smoke.py  test_testing.py  test_toolbox.py  test_voice.py  test_zimeiti.py
(+32 files in other folders)
