[project]
name = "yibao-brain"
version = "0.1.0"
description = "译宝 Python sidecar 大脑核心"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "openai>=1.40",
    # Plan 3a 执行/感知基座（跨平台）
    "mss>=9.0",
    "pillow>=10.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8",
    # macOS 专属（HIServices AX C API + 截图权限 + NSWorkspace）
    "pyobjc-core>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    # 语音（Plan 4a：STT sherpa + 录音 sounddevice + TTS edge-tts + 解码 miniaudio）
    "sherpa-onnx>=1.13",
    "sherpa-onnx-core>=1.13",
    "sounddevice>=0.4",
    "numpy>=1.26",
    "edge-tts>=7.2",
    "miniaudio>=1.59",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
memory = ["mem0ai>=0.1.20"]

[project.scripts]
yibao-brain = "yibao_brain.cli:main"
yibao-brain-server = "yibao_brain.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yibao_brain"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
